fix scroll jump and padding

--- a/app/shared/components/QuickInfoPanel/style.scss
+++ b/app/shared/components/QuickInfoPanel/style.scss
@@ -1,7 +1,7 @@
 .quick-info-panel {
   position: relative;
   width: 100%;
-  padding: 20px;
+  padding: 20px 15px;
   padding-top: 30px;
   background: $gray-100;
 
