--- a/app/shared/components/QuickInfoPanelTabs/style.scss
+++ b/app/shared/components/QuickInfoPanelTabs/style.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   max-width: 350px;
-  padding: 20px;
+  padding: 20px 15px;
   padding-top: 30px;
   background: $gray-100;
 
